bugfix: marquee was covering start button

--- a/homepage/style.css
+++ b/homepage/style.css
@@ -28,3 +28,8 @@ ul > li {
     left: -100%;
   }
 }
+
+#start-button {
+  position: relative;
+  z-index: 2;
+}
